.k8s/base/frontend/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app.kubernetes.io/component: web
    keel.sh/policy: patch
    keel.sh/match-tag: "true"
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/component: web
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
      containers:
      - name: web
        image: inko/soco-rima-frontend
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        lifecycle:
          preStop:
            exec:
              command: [ "sh", "-c", "sleep 5" ]
        resources:
          requests:
            memory: 110Mi
            cpu: 100m
          limits:
            memory: 256Mi
            cpu: 1
