.k8s/base/frontend/web/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app.kubernetes.io/component: web
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/component: web
