.k8s/base/frontend/web/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    description: RIMA
spec:
  rules:
  - host: rima.sc.inko.cloud
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 8080
  tls:
  - hosts:
    - rima.sc.inko.cloud
    secretName: rima-tls-crt
